config-root/namespaces/argocd/argo-cd-argocd/templates/argocd-server/argocd-server-grpc-ingress.yaml
# Source: argo-cd/templates/argocd-server/ingress-grpc.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
    meta.helm.sh/release-name: 'argocd'
  name: argocd-server-grpc
  labels:
    helm.sh/chart: argo-cd-4.10.5
    app.kubernetes.io/name: argocd-server
    app.kubernetes.io/instance: argocd
    app.kubernetes.io/component: server
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: argocd
    gitops.jenkins-x.io/pipeline: 'namespaces'
  namespace: argocd
spec:
  rules:
    - host: argogrpc-argocd.34.66.36.255.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
